@@ -677,6 +677,12 @@ a frontend to mp3burn perl script. It can do mp3 lists manipulation and id3tags
 reading and has a very friendy gui.
 </ul>
 
+<ul>
+<li><a href="http://rome.sourceforge.net">ROME Target Builder</a> -
+a build configuration tool for the ROME embedded operating system.
+</ul>
+
+
 
 <!-- COPY THESE LINES AND FILL IN TO ADD A NEW APP
 <ul>
