@@ -1,3 +1,7 @@
+2001-12-10  Damon Chaplin  <damon@ximian.com>
+
+	* apps.html: added ROME Target Builder.
+
 2001-11-28  Damon Chaplin  <damon@ximian.com>
 
 	* apps.html: added gmp3burn.
